--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "babel-node tools/startMessage.js",
+    "start": "npm-run-all --parallel open:src lint:watch",
+    "open:src":"babel-node tools/server.js",
+    "lint":"node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch":"npm run lint -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
