Contact list fetched from swaggerhub api

--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch",
-    "open:src":"babel-node tools/server.js",
-    "lint":"node_modules/.bin/esw webpack.config.* src tools",
-    "lint:watch":"npm run lint -- --watch",
+    "open:src": "babel-node tools/server.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch": "npm run lint -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
