Form page redirects

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^0.16.2",
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
+    "history": "^4.7.2",
     "jquery": "2.2.3",
     "react": "15.0.2",
     "react-dom": "15.0.2",
+    "react-history": "^0.18.2",
     "react-redux": "4.4.5",
-    "react-router": "2.4.0",
+    "react-router": "^2.4.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
