--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "babel-node tools/startMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch",
-    "open:src": "babel-node tools/server.js",
-    "lint": "node_modules/.bin/esw webpack.config.* src tools",
-    "lint:watch": "npm run lint -- --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run clean && cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --inline --progress --colors",
+    "build:prod": "cross-env NODE_ENV=production webpack -p",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist/*"
   },
   "author": "",
   "license": "ISC",
@@ -22,8 +20,8 @@
     "konnektid-react-status": "github:konnektid/konnektid-react-status",
     "muicss": "^0.9.25",
     "querystring": "^0.2.0",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-history": "^0.18.2",
     "react-redux": "4.4.5",
     "react-router": "^2.4.0",
@@ -35,11 +33,11 @@
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
-    "babel-core": "6.8.0",
-    "babel-loader": "6.2.4",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-plugin-react-display-name": "2.0.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
     "cheerio": "0.22.0",
@@ -49,7 +47,9 @@
     "css-loader": "0.23.1",
     "enzyme": "2.2.0",
     "eslint": "2.9.0",
-    "eslint-plugin-import": "1.6.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "5.0.1",
     "eslint-watch": "2.1.11",
     "eventsource-polyfill": "0.9.6",
@@ -57,6 +57,8 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "html-webpack-plugin": "^2.26.0",
+    "install": "^0.10.1",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
@@ -65,11 +67,11 @@
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
-    "rimraf": "2.5.2",
+    "rimraf": "^2.6.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.0",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0"
+    "webpack": "^3.6.0",
+    "webpack-dashboard": "^1.0.0-5",
+    "webpack-dev-server": "^1.16.2"
   }
 }
