--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run clean && cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --inline --progress --colors",
+    "start": "npm run clean && cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --host 127.0.0.1 --inline --progress --colors",
     "build:prod": "cross-env NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist/*"
@@ -70,7 +70,7 @@
     "rimraf": "^2.6.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "^3.6.0",
+    "webpack": "^3.5.3",
     "webpack-dashboard": "^1.0.0-5",
     "webpack-dev-server": "^1.16.2"
   }
