--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run clean && cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --host 127.0.0.1 --inline --progress --colors",
-    "build:prod": "cross-env NODE_ENV=production webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
+    "start": "yarn run clean && cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --host 127.0.0.1 --inline --progress --colors",
+    "build:prod": "cross-env NODE_ENV=production webpack-dev-server -p",
     "clean": "rimraf dist/*"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-jest": "^21.2.0",
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
     "history": "^4.7.2",
@@ -59,6 +60,8 @@
     "file-loader": "0.8.5",
     "html-webpack-plugin": "^2.26.0",
     "install": "^0.10.1",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
@@ -73,5 +76,8 @@
     "webpack": "^3.5.3",
     "webpack-dashboard": "^1.0.0-5",
     "webpack-dev-server": "^1.16.2"
+  },
+  "jest":{
+    "testEnvironment":"node"
   }
 }
