--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["react", "es2015"]
-}
+	"presets": [
+		["es2015", {"modules": false}]
+	],
+
+	"env": {
+		"development":{
+			"plugins": ["transform-es2015-modules-commonjs","dynamic-import-node"]
+			},
+		"test": {
+			"presets":[["es2015"],"react"],
+			"plugins": ["transform-es2015-modules-commonjs","dynamic-import-node"]
+			}
+		}
+	}
