--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
+    "test": "cross-env NODE_ENV=test jest --coverage --env=jsdom --watchAll",
     "start": "yarn run clean && cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --host 127.0.0.1 --inline --progress --colors",
     "build:prod": "cross-env NODE_ENV=production webpack-dev-server -p",
     "clean": "rimraf dist/*"
@@ -16,6 +16,7 @@
     "babel-jest": "^21.2.0",
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
+    "enzyme-adapter-react-15": "^1.0.0",
     "history": "^4.7.2",
     "jquery": "2.2.3",
     "konnektid-react-status": "github:konnektid/konnektid-react-status",
@@ -28,6 +29,7 @@
     "react-router": "^2.4.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "4.0.4",
+    "react-test-renderer": "^15.6.1",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
     "toastr": "2.1.2"
@@ -36,7 +38,9 @@
     "babel-cli": "6.8.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-dynamic-import-node": "^1.1.0",
     "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "1.1.1",
@@ -46,7 +50,8 @@
     "compression": "1.6.1",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
-    "enzyme": "2.2.0",
+    "enzyme": "^3.0.0",
+    "enzyme-to-json": "^3.0.1",
     "eslint": "2.9.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -59,6 +64,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "html-webpack-plugin": "^2.26.0",
+    "identity-obj-proxy": "^3.0.0",
     "install": "^0.10.1",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
@@ -67,7 +73,7 @@
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
-    "react-addons-test-utils": "15.0.2",
+    "react-test-renderer": "^15.6.1",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "^2.6.2",
@@ -77,7 +83,18 @@
     "webpack-dashboard": "^1.0.0-5",
     "webpack-dev-server": "^1.16.2"
   },
-  "jest":{
-    "testEnvironment":"node"
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/__tests__/jestsetup.js"
+    ],
+    "verbose": true,
+    "testPathIgnorePatterns" : ["<rootDir>/__tests__/jestsetup.js"],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/test-file-stub.js"
+    },
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/enzyme-to-json/serializer"
+    ]
   }
 }
