--- a/package.json
+++ b/package.json
@@ -85,10 +85,9 @@
   },
   "jest": {
     "setupFiles": [
-      "<rootDir>/__tests__/jestsetup.js"
+      "<rootDir>/config/jestsetup.js"
     ],
     "verbose": true,
-    "testPathIgnorePatterns" : ["<rootDir>/__tests__/jestsetup.js"],
     "moduleNameMapper": {
       "\\.(css|less)$": "identity-obj-proxy",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/test-file-stub.js"
