--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "jest-cli": "^21.2.1",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
-    "nock": "8.0.0",
+    "nock": "^9.0.22",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "react-test-renderer": "^15.6.1",
@@ -87,8 +87,8 @@
     "webpack-dev-server": "^1.16.2"
   },
   "jest": {
-    "globals":{
-      "API_URL":"http://localhost:3030"
+    "globals": {
+      "API_URL": "http://localhost:3030"
     },
     "setupFiles": [
       "<rootDir>/config/jestsetup.js"
