--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
     "enzyme-adapter-react-15": "^1.0.0",
+    "flat": "^4.0.0",
     "history": "^4.7.2",
     "jquery": "2.2.3",
     "konnektid-react-status": "github:konnektid/konnektid-react-status",
